tests/checker/diagnostics/0090_core_function_application_mismatch_08.ml.infer.expected
File "0090_core_function_application_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0090_core_function_application_mismatch_08 is not a valid module name.

File "0090_core_function_application_mismatch_08.ml", line 2, characters 22-23:
2 | let _ = consume_theta 0
                          ^
Error: The constant 0 has type int but an expression was expected of type
         bool
